Update documentation to reflect new API endpoint URLs; change all instances of `http://localhost:3000` to `http://app.seemodo.ai` across various files, including CONTRIBUTING.md, README.md, and multiple API reference documents.

--- a/api-reference/endpoint/edit-screen.mdx
+++ b/api-reference/endpoint/edit-screen.mdx
@@ -45,7 +45,7 @@ POST /api/edit-screen
 ## Example Request
 
 ```bash
-curl -X POST http://localhost:3000/api/edit-screen \
+curl -X POST http://app.seemodo.ai/api/edit-screen \
   -H "Content-Type: application/json" \
   -d '{
     "prompt": "Change the primary button color to blue and add a subtitle under the heading",
