--- a/api-reference/endpoint/generate-flow.mdx
+++ b/api-reference/endpoint/generate-flow.mdx
@@ -29,7 +29,7 @@ POST /api/generate-flow
 ## Example Request
 
 ```bash
-curl -X POST http://localhost:3000/api/generate-flow \
+curl -X POST http://app.seemodo.ai/api/generate-flow \
   -H "Content-Type: application/json" \
   -d '{
     "context": "Onboarding flow for a fitness tracking app with welcome, feature highlights, goal setting, and account creation",
