--- a/api-reference/endpoint/sandbox-files.mdx
+++ b/api-reference/endpoint/sandbox-files.mdx
@@ -45,7 +45,7 @@ No request parameters required.
 ## Example Request
 
 ```bash
-curl http://localhost:3000/api/get-sandbox-files
+curl http://app.seemodo.ai/api/get-sandbox-files
 ```
 
 ## Success Response
