--- a/api-reference/endpoint/sandbox-status.mdx
+++ b/api-reference/endpoint/sandbox-status.mdx
@@ -43,7 +43,7 @@ No request parameters required. Returns information about the currently active s
 ## Example Request
 
 ```bash
-curl http://localhost:3000/api/sandbox-status
+curl http://app.seemodo.ai/api/sandbox-status
 ```
 
 ### Active and Healthy
