--- a/api-reference/endpoint/seemodo-cloud.mdx
+++ b/api-reference/endpoint/seemodo-cloud.mdx
@@ -59,7 +59,7 @@ Connect an existing Supabase project to your sandbox.
 ### Example Request
 
 ```bash
-curl -X POST http://localhost:3000/api/seemodo-cloud \
+curl -X POST http://app.seemodo.ai/api/seemodo-cloud \
   -H "Content-Type: application/json" \
   -H "X-Supabase-Token: sbp_your_token_here" \
   -d '{
@@ -137,7 +137,7 @@ Create a new Supabase project.
 ### Example Request
 
 ```bash
-curl -X POST http://localhost:3000/api/seemodo-cloud \
+curl -X POST http://app.seemodo.ai/api/seemodo-cloud \
   -H "Content-Type: application/json" \
   -H "X-Supabase-Token: sbp_your_token_here" \
   -d '{
