--- a/de/api-reference/endpoint/edit-screen.mdx
+++ b/de/api-reference/endpoint/edit-screen.mdx
@@ -45,7 +45,7 @@ POST /api/edit-screen
 ## Beispiel-Anfrage
 
 ```bash
-curl -X POST http://localhost:3000/api/edit-screen \
+curl -X POST http://app.seemodo.ai/api/edit-screen \
   -H "Content-Type: application/json" \
   -d '{
     "prompt": "Ändere die Primär-Button-Farbe zu blau und füge einen Untertitel unter der Überschrift hinzu",
