--- a/de/api-reference/endpoint/enhance-prompt.mdx
+++ b/de/api-reference/endpoint/enhance-prompt.mdx
@@ -27,7 +27,7 @@ POST /api/enhance-prompt
 ## Beispiel-Anfrage
 
 ```bash
-curl -X POST http://localhost:3000/api/enhance-prompt \
+curl -X POST http://app.seemodo.ai/api/enhance-prompt \
   -H "Content-Type: application/json" \
   -d '{
     "prompt": "dashboard für analytics",
