--- a/de/api-reference/endpoint/generate-flow.mdx
+++ b/de/api-reference/endpoint/generate-flow.mdx
@@ -29,7 +29,7 @@ POST /api/generate-flow
 ## Beispiel-Anfrage
 
 ```bash
-curl -X POST http://localhost:3000/api/generate-flow \
+curl -X POST http://app.seemodo.ai/api/generate-flow \
   -H "Content-Type: application/json" \
   -d '{
     "context": "Onboarding-Flow für eine Fitness-Tracking-App mit Willkommen, Feature-Highlights, Zielsetzung und Account-Erstellung",
