--- a/de/api-reference/endpoint/sandbox-status.mdx
+++ b/de/api-reference/endpoint/sandbox-status.mdx
@@ -43,7 +43,7 @@ Keine Request-Parameter erforderlich. Gibt Informationen über die aktuell aktiv
 ## Beispiel-Anfrage
 
 ```bash
-curl http://localhost:3000/api/sandbox-status
+curl http://app.seemodo.ai/api/sandbox-status
 ```
 
 ### Aktiv und gesund
