--- a/de/api-reference/endpoint/seemodo-cloud.mdx
+++ b/de/api-reference/endpoint/seemodo-cloud.mdx
@@ -59,7 +59,7 @@ Bestehendes Supabase-Projekt mit deiner Sandbox verbinden.
 ### Beispiel-Anfrage
 
 ```bash
-curl -X POST http://localhost:3000/api/seemodo-cloud \
+curl -X POST http://app.seemodo.ai/api/seemodo-cloud \
   -H "Content-Type: application/json" \
   -H "X-Supabase-Token: sbp_dein_token_hier" \
   -d '{
@@ -137,7 +137,7 @@ Neues Supabase-Projekt erstellen.
 ### Beispiel-Anfrage
 
 ```bash
-curl -X POST http://localhost:3000/api/seemodo-cloud \
+curl -X POST http://app.seemodo.ai/api/seemodo-cloud \
   -H "Content-Type: application/json" \
   -H "X-Supabase-Token: sbp_dein_token_hier" \
   -d '{
