--- a/de/seemodo/getting-started.mdx
+++ b/de/seemodo/getting-started.mdx
@@ -73,7 +73,7 @@ Bevor du beginnst, stelle sicher dass du hast:
     pnpm dev
     ```
 
-    Die App ist unter `http://localhost:3000` verfügbar.
+    Die App ist unter `http://app.seemodo.ai` verfügbar.
   </Step>
 </Steps>
 
@@ -81,7 +81,7 @@ Bevor du beginnst, stelle sicher dass du hast:
 
 ### Option 1: Einfacher Prompt
 
-1. Öffne `http://localhost:3000`
+1. Öffne `http://app.seemodo.ai`
 2. Gib einen Prompt ein wie:
    ```
    Eine moderne Task-Management-App mit dunklem Theme,
@@ -93,7 +93,7 @@ Bevor du beginnst, stelle sicher dass du hast:
 
 ### Option 2: Visueller Canvas
 
-1. Navigiere zu `http://localhost:3000/start`
+1. Navigiere zu `http://app.seemodo.ai/start`
 2. Nutze den **Studio** Tab um zu konfigurieren:
    - **Modus**: Wireframe oder HiFi (volle Farbe)
    - **Bildschirmgröße**: Desktop, Tablet oder Mobil
@@ -103,7 +103,7 @@ Bevor du beginnst, stelle sicher dass du hast:
 
 ### Option 3: Website klonen
 
-1. Öffne `http://localhost:3000`
+1. Öffne `http://app.seemodo.ai`
 2. Füge eine URL statt eines Text-Prompts ein:
    ```
    https://stripe.com/payments
