--- a/de/seemodo/introduction.mdx
+++ b/de/seemodo/introduction.mdx
@@ -61,7 +61,7 @@ Verbinde dein Supabase-Projekt für volle Backend-Funktionalität:
 
 <Steps>
   <Step title="Seemodo öffnen">
-    Navigiere zur Seemodo-App unter `http://localhost:3000` oder deiner bereitgestellten URL.
+    Navigiere zur Seemodo-App unter `http://app.seemodo.ai` oder deiner bereitgestellten URL.
   </Step>
   <Step title="Prompt eingeben">
     Beschreibe was du erstellen möchtest, oder füge eine URL zum Klonen ein.
