--- a/seemodo/introduction.mdx
+++ b/seemodo/introduction.mdx
@@ -61,7 +61,7 @@ Connect your Supabase project for full backend capabilities:
 
 <Steps>
   <Step title="Open Seemodo">
-    Navigate to the Seemodo app at `http://localhost:3000` or your deployed URL.
+    Navigate to the Seemodo app at `http://app.seemodo.ai` or your deployed URL.
   </Step>
   <Step title="Enter a prompt">
     Describe what you want to build, or paste a URL to clone.
