--- a/de/api-reference/endpoint/sandbox-files.mdx
+++ b/de/api-reference/endpoint/sandbox-files.mdx
@@ -45,7 +45,7 @@ Keine Request-Parameter erforderlich.
 ## Beispiel-Anfrage
 
 ```bash
-curl http://localhost:3000/api/get-sandbox-files
+curl http://app.seemodo.ai/api/get-sandbox-files
 ```
 
 ## Erfolgs-Antwort
