--- a/de/api-reference/endpoint/scrape-website.mdx
+++ b/de/api-reference/endpoint/scrape-website.mdx
@@ -35,7 +35,7 @@ POST /api/scrape-website
 ## Beispiel-Anfrage
 
 ```bash
-curl -X POST http://localhost:3000/api/scrape-website \
+curl -X POST http://app.seemodo.ai/api/scrape-website \
   -H "Content-Type: application/json" \
   -d '{
     "url": "https://example.com/landing-page",
