--- a/seemodo/getting-started.mdx
+++ b/seemodo/getting-started.mdx
@@ -73,7 +73,7 @@ Before you begin, ensure you have:
     pnpm dev
     ```
 
-    The app will be available at `http://localhost:3000`.
+    The app will be available at `http://app.seemodo.ai`.
   </Step>
 </Steps>
 
@@ -81,7 +81,7 @@ Before you begin, ensure you have:
 
 ### Option 1: Simple Prompt
 
-1. Open `http://localhost:3000`
+1. Open `http://app.seemodo.ai`
 2. Enter a prompt like:
    ```
    A modern task management app with a dark theme, 
@@ -93,7 +93,7 @@ Before you begin, ensure you have:
 
 ### Option 2: Visual Canvas
 
-1. Navigate to `http://localhost:3000/start`
+1. Navigate to `http://app.seemodo.ai/start`
 2. Use the **Studio** tab to configure:
    - **Mode**: Wireframe or HiFi (full color)
    - **Screen size**: Desktop, Tablet, or Mobile
@@ -103,7 +103,7 @@ Before you begin, ensure you have:
 
 ### Option 3: Clone a Website
 
-1. Open `http://localhost:3000`
+1. Open `http://app.seemodo.ai`
 2. Paste a URL instead of a text prompt:
    ```
    https://stripe.com/payments
